--- a/git.html
+++ b/git.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>altenate universe 2</title>
     </head>
-    <body>
-        <h1>hi, I'm on altenate universe</h1>
-        <p></p>
-    </body>
+    <body></body>
 </html>
