--- a/learncss.html
+++ b/learncss.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <htnl>
+    <head></head>
+    <link rel="stylesheet" href="style.css" />
     <title>Learn CSS</title>
-    <head>
+    <!---This is internal CSS-->
+    <style>
+        body {
+            background-color: yellow;
+        }
+    </style>
+     </head>
         <body>
-            <h1>Learn CSS is really fun!</h1>
+            <!--This is inline CSS-->
+            <h1 style="color:red;text-align: center;">Learn CSS is really fun!</h1>
+            <p>My name is Domu Sitorus</p>
         </body>
-    </head>
+   
 </htnl>
