--- a/learncss.html
+++ b/learncss.html
@@ -5,8 +5,24 @@
     <title>Learn CSS</title>
     <!---This is internal CSS-->
     <style>
+        /* This is a comment in CSS*/
         body {
-            background-color: yellow;
+           /* background-color: orange*/
+            /* This is using RGB*/
+            background-color:rgb(238, 130,238)
+            /* This is using HEX*/
+            background-color: #ffa500;
+            /* This is using HSL*/
+            background-color: hsl(147, 50%, 47%);
+        }
+        h1{
+            background-color: aqua;
+            border-bottom: 2px solod navy;
+            border-left: 20px solid yellow;
+        }
+        h2{
+            border-style: dashed;
+            border-color: violet;
         }
     </style>
      </head>
