--- a/learncss.html
+++ b/learncss.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<htnl>
-    <head></head>
+<html>
+    <head>
     <link rel="stylesheet" href="style.css" />
     <title>Learn CSS</title>
     <!---This is internal CSS-->
@@ -32,4 +32,4 @@
             <p>My name is Domu Sitorus</p>
         </body>
    
-</htnl>
+</html>
